welcome text added and header ready for image on compendium page

--- a/finalProject/TSW2/templates/TSW2/index.html
+++ b/finalProject/TSW2/templates/TSW2/index.html
@@ -10,10 +10,10 @@
     <div style="margin-left: 26%">
         <p class="articleHeaders" style="font-size: 60px; width: 70%; text-align:center; margin-right: 20px">Welcome to Train Sim World 2, the world's premiere train simulation game</p>
         <br>
-        <p class="comparisonParagraphs" style="text-align: center; margin-left: 5%">
-            From lightning fast commuter lines, to monstrous unti coal trains,
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 5%;">
+            From lightning fast commuter lines, to monstrous unit coal trains,
             Train Sim World 2 has it all. Spend just a few minutes in the engineer's seat, and you'll find yourself completly immersed in a world filled with
-            speed, power, and sound of screaming steel. Still not convinced that you should be playing Train Sim World 2? Check out the content on this website
+            speed, power, and the sound of screaming steel. Still not convinced that you should be playing Train Sim World 2? Check out the content on this website
             to get a taste of the game before you try it for yourself.  
         </p>
     </div>
