--- a/finalProject/TSW2/templates/TSW2/spotlights.html
+++ b/finalProject/TSW2/templates/TSW2/spotlights.html
@@ -38,7 +38,7 @@
         </div>
         <div class="articleContainer">
             <p class="comparisonParagraphs">
-                Sand Patch Grade is a 100 mile section of railroad track joining Pennsylvania and Maryland. Sand Patch Grade was originally constructed by the Pittsburgh & Connelsville Railroad to connect Pittsburgh and Connellsville. An extension of the line to Cumberland, Maryland was authorized in 1853. To get to Cumberland, the railroad had to cross the Allegheny Mountains via a 4,777 foot (1,456 m) long tunnel, which was constructed between 1654 and 1871. At the time, the tunnel was one of the longest in the United States.
+                Sandpatch Grade is a 100 mile section of railroad track joining Pennsylvania and Maryland. Sandpatch Grade was originally constructed by the Pittsburgh & Connelsville Railroad to connect Pittsburgh and Connellsville. An extension of the line to Cumberland, Maryland was authorized in 1853. To get to Cumberland, the railroad had to cross the Allegheny Mountains via a 4,777 foot (1,456 m) long tunnel, which was constructed between 1654 and 1871. At the time, the tunnel was one of the longest in the United States.
             </p>
         </div>
         <br>
@@ -76,7 +76,7 @@
         <br>
         <div class="articleContainer">
             <p class="comparisonParagraphs">   
-                Train Sim World 2 has recreated a 44.8 mile stretch of the CSX’s Keystone subdivision. In game, the player has the ability to run trains between Cumberland, Maryland and Rockwood, Pennsylvania. This stretch of track is one of the busiest CSX runs, with 30-35 trains passing through in a 24 hour cycle. The line between Cumberland and Rockwood includes the summit of the Allegheny Mountains at Sand Patch, with a grade of 1.94%. This allows the player to take control of through trains trying to struggle up the summit and helper crews, providing a wide variety of possible operations. The replicated area also includes two coal mines, the Shaw and Rockwood mines, both of which are fully functioning in game.
+                Train Sim World 2 has recreated a 44.8 mile stretch of the CSX’s Keystone subdivision. In game, the player has the ability to run trains between Cumberland, Maryland and Rockwood, Pennsylvania. This stretch of track is one of the busiest on the CSX mainline, with 30-35 trains passing through in a 24 hour cycle. The line between Cumberland and Rockwood includes the summit of the Allegheny Mountains at Sandpatch, with a grade of 1.94%. This allows the player to take control of through trains trying to struggle up the summit and helper crews, providing a wide variety of possible operations. The replicated area also includes two coal mines, the Shaw and Rockwood mines, both of which are fully functioning in game.
             </p>
         </div>
         <br>
@@ -88,7 +88,7 @@
         <br>
         <div class="articleContainer">
             <p class="comparisonParagraphs">   
-                Sand Patch Grade allows players to get the full mainline railroading experience. Whether you’re interested in switching in the yard, taking the local freight to pick up some coal cars from one of the two mines, or taking a hotshot intermodal freight up the summit at Sandpatch, Train Sim World 2 lets you do it all. Dovetail made a really smart decision when they chose to replicate this stretch of track, as it features some of the most exciting train operations on the entire East Coast. It provides a challenging, but rewarding experience for the player, as they try to juggle a busy schedule, heavy trains, and challenging terrain. All in all, running trains on Sand Patch Grade is an experience that every train fan can enjoy. 
+                Sandpatch Grade allows players to get the full mainline railroading experience. Whether you’re interested in switching in the yard, taking the local freight to pick up some coal cars from one of the two mines, or taking a hotshot intermodal freight up the summit at Sandpatch, Train Sim World 2 lets you do it all. Dovetail made a really smart decision when they chose to replicate this stretch of track, as it features some of the most exciting train operations on the entire East Coast. It provides a challenging, but rewarding experience for the player, as they try to juggle a busy schedule, heavy trains, and challenging terrain. All in all, running trains on Sand Patch Grade is an experience that every train fan can enjoy. 
             </p>
         </div>
         <br>
