--- a/finalProject/TSW2/templates/TSW2/compendium.html
+++ b/finalProject/TSW2/templates/TSW2/compendium.html
@@ -1,3 +1,20 @@
-{% extends network/layout.html %} 
+{% extends "TSW2/layout.html" %} 
 {% load static %} 
+
+{% block body %}
+    <div class="titleDivs">
+        <img src="" class="bgImg">
+    </div>
+    <br>
+    <br>
+    <br>
+    <hr style="background-color: rgb(248, 239, 207);">;">
+    <br>
+    <br>
+    <div class="articleContainer">
+        <p class="comparisonParagraphs" style="font-size: 35px; text-align: center;">Want to find out a bit more about some of the freight cars and locomotives
+        featurted in Train Sim World 2? Use the interactive window below to find details on your favorite items from Train Sim World 2. Want to add an entry for a newly
+        added engine or freight car? No problem! Fill out a new entry and update the database with the new asset!</p>
+    </div>
+{% endblock %} 
 
