--- a/finalProject/TSW2/templates/TSW2/layout.html
+++ b/finalProject/TSW2/templates/TSW2/layout.html
@@ -27,6 +27,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'spotlights' %}">Location Spotlights</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'compendium' %}">Train Sim World 2 Locomotive And Freight Car Fact Finder</a>
+                    </li>
+                    
                     
                 </ul>
             </div>
