javascript is set up and ready for api

--- a/finalProject/TSW2/static/TSW2/styles.css
+++ b/finalProject/TSW2/static/TSW2/styles.css
@@ -80,6 +80,16 @@ body {
     font-size: 75px;
 }
 
+.compHeaders {
+    font-family: "Teko";
+    color: rgb(248, 239, 207);
+    font-size: 50px;
+}
+
+.compHeaders:hover {
+    color: black;
+}
+
 .articleContainer {
     display: flex;
     justify-content: center;
