--- a/finalProject/TSW2/templates/TSW2/compendium.html
+++ b/finalProject/TSW2/templates/TSW2/compendium.html
@@ -19,8 +19,8 @@
     <br>
     <br>
     <br>
-    <div class="jumbotron" style="display: flex; width: 80%; margin-left: 10%; background-color: rgb(121, 121, 121); justify-content: center;">
-        <div style="display: flex;">
+    <div class="jumbotron" style="width: 80%; margin-left: 10%; background-color: rgb(121, 121, 121);">
+        <div style="display: flex; justify-content: center;">
             <p class="articleHeaders" style="font-size: 50px;">Sort By:</p>
             <p class="compHeaders" style="margin-left: 50px;" id="locomotive">Locomotives</p>
             <p class="compHeaders" style="margin-left: 50px;" id="freight">Freight Cars</p>
