--- a/finalProject/TSW2/templates/TSW2/compendium.html
+++ b/finalProject/TSW2/templates/TSW2/compendium.html
@@ -19,14 +19,15 @@
     <br>
     <br>
     <br>
-    <div class="jumbotron" style="width: 80%; margin-left: 10%; background-color: rgb(121, 121, 121);">
+    <div class="jumbotron" style="width: 80%; margin-left: 10%; background-color: rgb(121, 121, 121); box-shadow: 10px 5px 10px #000000;">
         <div style="display: flex; justify-content: center;">
             <p class="articleHeaders" style="font-size: 50px;">Sort By:</p>
             <p class="compHeaders" style="margin-left: 50px;" id="locomotive">Locomotives</p>
             <p class="compHeaders" style="margin-left: 50px;" id="freight">Freight Cars</p>
             <p class="compHeaders" style="margin-left: 50px;" id="passenger" value="passenger">Passenger Cars</p>
         </div>
-        
+        <br>
+        <br>
     </div>
     <br>
     <br>
