created freight model

--- a/finalProject/TSW2/templates/TSW2/compendium.html
+++ b/finalProject/TSW2/templates/TSW2/compendium.html
@@ -13,8 +13,7 @@
     <br>
     <div class="articleContainer">
         <p class="comparisonParagraphs" style="font-size: 35px; text-align: center;">Want to find out a bit more about some of the freight cars, passengers cars, and locomotives
-        featured in Train Sim World 2? Use the interactive window below to find details on your favorite items from Train Sim World 2. Want to add an entry for a newly
-        added engine or freight car? No problem! Fill out a new entry and update the database with the new asset!</p>
+        featured in Train Sim World 2? Use the interactive window below to find details on your favorite items from Train Sim World 2. Want to add an entry for a new engine or freight car? No problem! Fill out a new entry and update the database with the new asset!</p>
     </div>
     <br>
     <br>
