--- a/finalProject/TSW2/templates/TSW2/compendium.html
+++ b/finalProject/TSW2/templates/TSW2/compendium.html
@@ -43,7 +43,7 @@
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Locomotive Name:</p>
-                    <input type="text" class="form-control" id="locoType" style="margin-top: 1%; margin-left: 2%; width:40%" required>
+                    <input type="text" class="form-control" id="locoName" style="margin-top: 1%; margin-left: 2%; width:40%" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Locomotive Power Type:</p>
@@ -70,9 +70,14 @@
                     <input type="number" class="form-control" id="locoAxles" style="margin-top: 1%; margin-left: 2%; width:20%" min="1" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
+                    <p class="articleHeaders" style="font-size: 50px; ">Enter Location Locomotive Is Included With:</p>
+                    <input type="text" class="form-control" id="location" style="margin-top: 1%; margin-left: 2%; width:20%" required>
+                </div>
+                <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter URL For Image (optional):</p>
                     <input type="url" class="form-control" id="imageUrl" style="margin-top: 1%; margin-left: 2%; width:40%">
                 </div>
+                <button type="button" class="btn btn-primary" id="locoButton">Create New Entry</button>
             </div>
         </div>
         <br>
@@ -84,4 +89,5 @@
 
 {% block script %}  
     <script src="{% static 'TSW2/compendium.js' %}"></script>
+    <script src="{% static 'TSW2/entry.js' %}"></script>
 {% endblock %} 
