compendium page finished except for header

--- a/finalProject/TSW2/templates/TSW2/compendium.html
+++ b/finalProject/TSW2/templates/TSW2/compendium.html
@@ -119,6 +119,43 @@
         </div>
         <br>
         <br>
+
+        <!--passenger div-->
+        <div  id="addPassenger">
+            <hr style="background-color: rgb(248, 239, 207); width: 80%">
+            <br>
+            <div style="margin-left: 6%">
+                <p class="articleHeaders">Add An Entry:</p>
+                <br>
+                <div style="display: inline-flex; width: 100%">
+                    <p class="articleHeaders" style="font-size: 50px; ">Enter Passenger Car Name:</p>
+                    <input type="text" class="form-control" id="passengerName" style="margin-top: 1.5%; margin-left: 2%; width:40%" required>
+                </div>
+                <div style="display: inline-flex; width: 100%">
+                    <p class="articleHeaders" style="font-size: 50px; ">Enter Passenger Car Length:</p>
+                    <input type="text" class="form-control" id="passengerLength" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                </div>
+                <div style="display: inline-flex; width: 100%">
+                    <p class="articleHeaders" style="font-size: 50px; ">Enter Passenger Car Width:</p>
+                    <input type="text" class="form-control" id="passengerWidth" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                </div>
+                <div style="display: inline-flex; width: 100%">
+                    <p class="articleHeaders" style="font-size: 50px; ">Enter Passenger Car Height:</p>
+                    <input type="text" class="form-control" id="passengerHeight" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                </div>
+                <div style="display: inline-flex; width: 100%">
+                    <p class="articleHeaders" style="font-size: 50px;">Enter Passenger Car Capacity:</p>
+                    <input type="number" class="form-control" id="passengerCapacity" style="margin-top: 1.5%; margin-left: 2%; width:20%" min="1" required>
+                </div>
+                <div style="display: inline-flex; width: 100%">
+                    <p class="articleHeaders" style="font-size: 50px; ">Enter URL For Image (optional):</p>
+                    <input type="url" class="form-control" id="imageUrlPassenger" style="margin-top: 1.5%; margin-left: 2%; width:40%">
+                </div>
+                <button type="button" class="btn btn-primary" id="passengerButton">Create New Entry</button>
+            </div>
+        </div>
+        <br>
+        <br>
     </div>
     <br>
     <br>
