compendium page completed

--- a/finalProject/TSW2/templates/TSW2/compendium.html
+++ b/finalProject/TSW2/templates/TSW2/compendium.html
@@ -2,12 +2,9 @@
 {% load static %} 
 
 {% block body %}
-    <div class="titleDivs">
-        <img src="" class="bgImg">
+    <div class="titleDivsM">
+        <img src="https://williamraineyapplication.files.wordpress.com/2021/10/tsw2-locomotive-and-railcar-fact-finder.png" class="bgImg">
     </div>
-    <br>
-    <br>
-    <br>
     <hr style="background-color: rgb(248, 239, 207); width: 80%">;">
     <br>
     <br>
