--- a/finalProject/TSW2/templates/TSW2/layout.html
+++ b/finalProject/TSW2/templates/TSW2/layout.html
@@ -14,24 +14,25 @@
     </head>
     <body>
         
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark;" style="background-color:  #002933;">
 
             <div>
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav mr-auto" style="height: 75px;">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'index' %}">Home</a>
+                        <a class="nav-link" href="{% url 'index' %}" style="font-size: 20px; margin-top: 21%; color: rgb(248, 239, 207)">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'comparison' %}">Gameplay VS Reality</a>
+                        <a class="nav-link" href="{% url 'comparison' %}" style="font-size: 20px; margin-top: 7.75%; transform: translate(75px); color: rgb(248, 239, 207)">Gameplay VS Reality</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'spotlights' %}">Location Spotlights</a>
+                        <a class="nav-link" href="{% url 'spotlights' %}" style="font-size: 20px; margin-top: 7.75%; transform: translate(150px); color: rgb(248, 239, 207)">Location Spotlights</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'compendium' %}">Train Sim World 2 Locomotive, Passenger Car, And Freight Car Fact Finder</a>
+                        <a class="nav-link" href="{% url 'compendium' %}" style="font-size: 20px; margin-top: 2%; transform: translate(220px); color: rgb(248, 239, 207)">Train Sim World 2 Locomotive, Passenger Car, And Freight Car Fact Finder</a>
                     </li>
-                    
-                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'showcase' %}" style="font-size: 20px; transform: translate(300px, 12px); color: rgb(248, 239, 207)">Gameplay Showcase</a>
+                    </li>
                 </ul>
             </div>
         </nav>
