--- a/finalProject/TSW2/templates/TSW2/showcase.html
+++ b/finalProject/TSW2/templates/TSW2/showcase.html
@@ -2,5 +2,36 @@
 {% load static %} 
 
 {% block body %} 
+    <div class="titleDivsLg">
+        <img src="https://williamraineyapplication.files.wordpress.com/2021/10/homeheader.png" class="bgImg">
+    </div>
+    <br>
+    <br>
 
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/sdo8zrCpZiA" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/8uGZ9JJcfVw" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        
+    </div>
+  <br>
+  <br>
 {% endblock %} 
