--- a/finalProject/TSW2/templates/TSW2/showcase.html
+++ b/finalProject/TSW2/templates/TSW2/showcase.html
@@ -8,7 +8,7 @@
     <br>
     <br>
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
         <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="videoDiv">
