added all videos to image carousel

--- a/finalProject/TSW2/templates/TSW2/showcase.html
+++ b/finalProject/TSW2/templates/TSW2/showcase.html
@@ -2,7 +2,7 @@
 {% load static %} 
 
 {% block body %} 
-    <div class="titleDivsLg">
+    <div class="titleDivs">
         <img src="https://williamraineyapplication.files.wordpress.com/2021/10/homeheader.png" class="bgImg">
     </div>
     <br>
@@ -22,6 +22,60 @@
                 </iframe>
             </div>
         </div>
+        <div class="carousel-item">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/8oQE4Bh7IFU" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/V3s7Vt7rxIQ" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/8Twj15ORGYc" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/9H22MuQkT50" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/rPMkrEDeIB0" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/Eua7HcDlyro" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/oeTP6aSj0JQ" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/Y0_z5gKwnIA" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="videoDiv">
+                <iframe width="768" height="432" src="https://youtube.com/embed/BFX6XSbOmLU" allowfullscreen frameborder=0>
+                </iframe>
+            </div>
+        </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -30,7 +84,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
-        
+          
     </div>
   <br>
   <br>
