inserted image into header

--- a/finalProject/TSW2/templates/TSW2/showcase.html
+++ b/finalProject/TSW2/templates/TSW2/showcase.html
@@ -2,8 +2,8 @@
 {% load static %} 
 
 {% block body %} 
-    <div class="titleDivs">
-        <img src="https://williamraineyapplication.files.wordpress.com/2021/10/homeheader.png" class="bgImg">
+    <div class="titleDivsM">
+        <img src="https://williamraineyapplication.files.wordpress.com/2021/10/game-play-showcase.png" class="bgImg">
     </div>
     <br>
     <br>
