added map to page

--- a/finalProject/TSW2/templates/TSW2/showcase.html
+++ b/finalProject/TSW2/templates/TSW2/showcase.html
@@ -6,81 +6,90 @@
         <img src="https://williamraineyapplication.files.wordpress.com/2021/10/game-play-showcase.png" class="bgImg">
     </div>
     <br>
+    <hr style="background-color: rgb(248, 239, 207); width: 90%">
     <br>
-
+    <div class="container" style="display:flex; justify-content: center; width:80%; height: 550px;">
+        <img src="https://williamraineyapplication.files.wordpress.com/2021/10/csxs-sandpatch-grade.png">
+    </div>
+    <br>
+    <br>
+    <hr style="background-color: rgb(248, 239, 207); width: 90%">
+    <br>
+    <p class="articleHeaders" style="text-align: center;">Use The Image Carousel To Swap Between Points</p>
+    <br>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
         <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/sdo8zrCpZiA" allowfullscreen frameborder=0>
+                <iframe width="640" height="480" src="https://youtube.com/embed/sdo8zrCpZiA" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
         <div class="carousel-item">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/8uGZ9JJcfVw" allowfullscreen frameborder=0>
+                <iframe width="640" height="480" src="https://youtube.com/embed/8uGZ9JJcfVw" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
         <div class="carousel-item">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/8oQE4Bh7IFU" allowfullscreen frameborder=0>
+                <iframe width="640" height="480" src="https://youtube.com/embed/8oQE4Bh7IFU" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
         <div class="carousel-item">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/V3s7Vt7rxIQ" allowfullscreen frameborder=0>
+                <iframe width="640" height="480"src="https://youtube.com/embed/V3s7Vt7rxIQ" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
         <div class="carousel-item">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/8Twj15ORGYc" allowfullscreen frameborder=0>
+                <iframe width="640" height="480" src="https://youtube.com/embed/8Twj15ORGYc" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
         <div class="carousel-item">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/9H22MuQkT50" allowfullscreen frameborder=0>
+                <iframe width="640" height="480" src="https://youtube.com/embed/9H22MuQkT50" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
         <div class="carousel-item">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/rPMkrEDeIB0" allowfullscreen frameborder=0>
+                <iframe width="640" height="480" src="https://youtube.com/embed/rPMkrEDeIB0" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
         <div class="carousel-item">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/Eua7HcDlyro" allowfullscreen frameborder=0>
+                <iframe width="640" height="480" src="https://youtube.com/embed/Eua7HcDlyro" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
         <div class="carousel-item">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/oeTP6aSj0JQ" allowfullscreen frameborder=0>
+                <iframe width="640" height="480" src="https://youtube.com/embed/oeTP6aSj0JQ" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
         <div class="carousel-item">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/Y0_z5gKwnIA" allowfullscreen frameborder=0>
+                <iframe width="640" height="480" src="https://youtube.com/embed/Y0_z5gKwnIA" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
         <div class="carousel-item">
             <div class="videoDiv">
-                <iframe width="768" height="432" src="https://youtube.com/embed/BFX6XSbOmLU" allowfullscreen frameborder=0>
+                <iframe width="640" height="480" src="https://youtube.com/embed/BFX6XSbOmLU" allowfullscreen frameborder=0>
                 </iframe>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" style="margin-left: 20%;">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" style="margin-right: 20%;">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
