--- a/finalProject/TSW2/templates/TSW2/layout.html
+++ b/finalProject/TSW2/templates/TSW2/layout.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Train Sim World 2 Review{% endblock %}</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="{% static 'TSW2/styles.css' %}" rel="stylesheet" type="text/css">
@@ -46,3 +48,4 @@
         </div>
     </body>
 </html>
+
