--- a/finalProject/TSW2/templates/TSW2/showcase.html
+++ b/finalProject/TSW2/templates/TSW2/showcase.html
@@ -5,109 +5,116 @@
     <div class="titleDivsM">
         <img src="https://williamraineyapplication.files.wordpress.com/2021/10/game-play-showcase.png" class="bgImg">
     </div>
-    <br>
     <hr style="background-color: rgb(248, 239, 207); width: 90%">
     <br>
-    <div class="container" style="display:flex; justify-content: center; width:80%; height: 550px;">
-        <img src="https://williamraineyapplication.files.wordpress.com/2021/10/csxs-sandpatch-grade.png">
-        <span class="dot" style="transform: translate(-140px, 485px); background-color: red;" id="1"></span>
-        <span class="dot" style="transform: translate(-139px, 470px);" id="2"></span>
-        <span class="dot" style="transform: translate(-139px, 455px);" id="11"></span>
-        <span class="dot" style="transform: translate(-190px, 497px);" id="10"></span>
-        <span class="dot" style="transform: translate(-220px, 505px);" id="9"></span>
-        <span class="dot" style="transform: translate(-533px, 352px);" id="8"></span>
-        <span class="dot" style="transform: translate(-681px, 192px);" id="7"></span>
-        <span class="dot" style="transform: translate(-695px, 168px);" id="6"></span>
-        <span class="dot" style="transform: translate(-768px, 55px);" id="5"></span>
-        <span class="dot" style="transform: translate(-768px, 40px);" id="4"></span>
-        <span class="dot" style="transform: translate(-805px, 70px);" id="3"></span>
+    <p class="articleHeaders" style="display: flex; justify-content: center;">CSX's Sandpatch Grade</p>
+    <p class="articleHeaders" style="text-align: center; font-size: 50px">Use The Image Carousel To Flip Between Points On The Map</p>
+
+    <div style="display: inline-flex;">
+        <div class="container" style="display:flex; justify-content: center; height: 550px; margin-left: 50px;">
+            <img src="https://williamraineyapplication.files.wordpress.com/2021/10/csxs-sandpatch-grade1.png">
+            <span class="dot" style="transform: translate(-148px, 485px); background-color: red;" id="1"></span>
+            <span class="dot" style="transform: translate(-150px, 470px);" id="2"></span>
+            <span class="dot" style="transform: translate(-155px, 455px);" id="11"></span>
+            <span class="dot" style="transform: translate(-217px, 497px);" id="10"></span>
+            <span class="dot" style="transform: translate(-250px, 505px);" id="9"></span>
+            <span class="dot" style="transform: translate(-578px, 352px);" id="8"></span>
+            <span class="dot" style="transform: translate(-715px, 192px);" id="7"></span>
+            <span class="dot" style="transform: translate(-735px, 155px);" id="6"></span>
+            <span class="dot" style="transform: translate(-825px, 65px);" id="5"></span>
+            <span class="dot" style="transform: translate(-815px, 30px);" id="4"></span>
+            <span class="dot" style="transform: translate(-880px, 80px);" id="3"></span>
+        </div>
+
+        <div>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480" src="https://youtube.com/embed/sdo8zrCpZiA" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480" src="https://youtube.com/embed/8uGZ9JJcfVw" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480" src="https://youtube.com/embed/8oQE4Bh7IFU" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480"src="https://youtube.com/embed/V3s7Vt7rxIQ" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480" src="https://youtube.com/embed/8Twj15ORGYc" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480" src="https://youtube.com/embed/9H22MuQkT50" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480" src="https://youtube.com/embed/rPMkrEDeIB0" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480" src="https://youtube.com/embed/Eua7HcDlyro" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480" src="https://youtube.com/embed/oeTP6aSj0JQ" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480" src="https://youtube.com/embed/Y0_z5gKwnIA" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="videoDiv">
+                            <iframe width="640" height="480" src="https://youtube.com/embed/BFX6XSbOmLU" allowfullscreen frameborder=0>
+                            </iframe>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" id="L" style="margin-top: 550px; margin-left: 150px;">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next"  id="R" style="margin-top: 550px; margin-right: 150px;">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+                
+        </div> 
     </div>
     <br>
     <br>
-    <hr style="background-color: rgb(248, 239, 207); width: 90%">
     <br>
-    <p class="articleHeaders" style="text-align: center;">Use The Image Carousel To Swap Between Points</p>
     <br>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
-        <div class="carousel-inner">
-        <div class="carousel-item active">
-            <div class="videoDiv">
-                <iframe width="640" height="480" src="https://youtube.com/embed/sdo8zrCpZiA" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="videoDiv">
-                <iframe width="640" height="480" src="https://youtube.com/embed/8uGZ9JJcfVw" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="videoDiv">
-                <iframe width="640" height="480" src="https://youtube.com/embed/8oQE4Bh7IFU" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="videoDiv">
-                <iframe width="640" height="480"src="https://youtube.com/embed/V3s7Vt7rxIQ" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="videoDiv">
-                <iframe width="640" height="480" src="https://youtube.com/embed/8Twj15ORGYc" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="videoDiv">
-                <iframe width="640" height="480" src="https://youtube.com/embed/9H22MuQkT50" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="videoDiv">
-                <iframe width="640" height="480" src="https://youtube.com/embed/rPMkrEDeIB0" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="videoDiv">
-                <iframe width="640" height="480" src="https://youtube.com/embed/Eua7HcDlyro" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="videoDiv">
-                <iframe width="640" height="480" src="https://youtube.com/embed/oeTP6aSj0JQ" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="videoDiv">
-                <iframe width="640" height="480" src="https://youtube.com/embed/Y0_z5gKwnIA" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="videoDiv">
-                <iframe width="640" height="480" src="https://youtube.com/embed/BFX6XSbOmLU" allowfullscreen frameborder=0>
-                </iframe>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" style="margin-left: 20%;" id="L">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" style="margin-right: 20%;" id="R">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-          
-    </div>
-  <br>
-  <br>
+    
+    <br>
+    <br>
 {% endblock %} 
 
 {% block script %} 
